fix: remove scrollbar in site demo story

--- a/draft-packages/stories/FilterDrawer.stories.scss
+++ b/draft-packages/stories/FilterDrawer.stories.scss
@@ -14,6 +14,6 @@
 
 .siteDemoWrapper {
   background-color: $kz-color-wisteria-700;
-  height: 400px;
+  height: 368px;
   padding: 1rem;
 }
